--- a/frontend-anogab/src/components/Sidebar.css
+++ b/frontend-anogab/src/components/Sidebar.css
@@ -8,6 +8,7 @@
   align-items: center;
 }
 
+
 .icon {
   width: 38px;
   height: 38px;
@@ -63,3 +64,28 @@
     stroke: currentColor;
   } 
 } 
+
+
+.close-btn {
+  display: none;
+  background: none;
+  border: none;
+  color: white;
+  font-size: 2rem;
+  align-self: flex-end;
+  margin-bottom: 1rem;
+  position: absolute;
+  top: 1rem;
+}
+
+@media (max-width: 600px) {
+  .sidebar{
+    padding: 0 1rem;
+  }
+
+  .close-btn {
+    display: block;
+    color: black;
+    
+  }
+}
