--- a/frontend-anogab/src/components/navbar.css
+++ b/frontend-anogab/src/components/navbar.css
@@ -9,12 +9,6 @@
   padding-left: 0.8rem;
 }
 
-.navbar .logo img{
-  height: 2.4rem;
-  margin-left: 3px;
-  margin-right: 6px;
-}
-
 .navbar .logo {
   display: flex;
   align-items: center;
@@ -22,14 +16,23 @@
   font-size: 2.25rem;
   font-weight: 500;
   color: var(--med-teal);
+  text-decoration: none;
 }
+
+.navbar .logo img{
+  height: 2.4rem;
+  margin-left: 3px;
+  margin-right: 6px;
+}
+
+
 
 .navbar .nav-links a {
   font-family: "Roboto Slab", sans-serif;
   font-size: 1.2rem;
   font-weight: 500;
   color: var(--dark-grey);
-  margin-left: 20px;
+  margin: 0 10px;
   text-decoration: none;
   position: relative; /* Required for positioning the pseudo-element */
 }
@@ -45,6 +48,10 @@
   transition: width 0.2s ease-in-out;
 }
 
+.navbar .nav-links a:hover {
+  font-weight: 700;
+}
+
 .navbar .nav-links a:hover::after {
   width: 100%; /* Expands the underline on hover */
 }
@@ -52,4 +59,44 @@
 /* Active link styling */
 .navbar .nav-links a.active-link::after {
   width: 100%; /* Ensures the underline is fully visible when the link is active */
+}
+
+
+/*  */
+
+
+.burger {
+  font-size: 2rem;
+  background: none;
+  border: none;
+  color: var(--med-teal);
+  display: none; /* Hidden on desktop */
+  cursor: pointer;
+}
+
+/* Show burger on mobile */
+@media (max-width: 600px) {
+  .navbar{
+    padding: 0.6rem;
+    padding-bottom: 0;
+  }
+
+  .navbar .logo{
+    font-size: 2rem;
+  }
+
+  .navbar .logo img{ 
+    height: 2.1rem;
+  }
+
+  .nav-links{
+    display: flex;
+    justify-content: end;
+    align-items: center;
+  }
+  
+  .burger {
+    display: block;
+    margin-left: 16px;
+  }
 }
