--- a/frontend-anogab/src/components/Layout.css
+++ b/frontend-anogab/src/components/Layout.css
@@ -12,6 +12,7 @@
   display: flex;
   height: 100%;
   width: 100%;
+  overflow: auto;
 }
 
 .sidebar-area{
@@ -25,7 +26,7 @@
   width: 100%;
   margin-bottom: 10px;
   margin-right: 10px;
-  overflow: hidden;
+  overflow: auto;
 
 }
 
