--- a/frontend-anogab/src/pages/about.css
+++ b/frontend-anogab/src/pages/about.css
@@ -1,9 +1,10 @@
 .about{
     height: 100%;
     width: 100%;
+    padding: 2rem 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     overflow: auto;
 }
