--- a/frontend-anogab/src/Index.css
+++ b/frontend-anogab/src/Index.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  -webkit-tap-highlight-color: red;
+  -webkit-tap-highlight-color: transparent;
 }
 
 
