--- a/frontend-anogab/src/components/Sidebar.css
+++ b/frontend-anogab/src/components/Sidebar.css
@@ -22,8 +22,11 @@
   fill-opacity: 0.8;
 }
 
+.roomelement{
+  margin-top: 0 !important;
+}
+
 .roomsvg{
-  /* color: var(--med-teal); */
   opacity: 0.65;
 }
 
