--- a/frontend-anogab/src/components/Sidebar.css
+++ b/frontend-anogab/src/components/Sidebar.css
@@ -1,11 +1,10 @@
 .sidebar {
   height: 100%;
-  width: 100%;
+  min-width: 5.8rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: var(--light-grey);
 }
 
 
@@ -100,6 +99,8 @@
 @media (max-width: 600px) {
   .sidebar{
     padding: 0 1rem;
+    background-color: var(--light-grey);
+
   }
 
   .close-btn {
